<resources>
    <string name="NoItemInListView">No data in the list</string>
    <string name="about_content"><a href="http://dolphin.com/blog/">Blog</a> |<a href="dolphin://feedback">Email</a> |<a href="http://www.facebook.com/pages/Dolphin-Browser/152443618142266">Facebook</a> |<a href="http://twitter.com/dolphinbrowser">Twitter</a></string>
    <string name="accept">Accept</string>
    <string name="account">Account</string>
    <string name="account_box_login_summary">Log in to Box and share with one-click in Dolphin.</string>
    <string name="account_evernote_login_summary">Log in to Evernote and share with one-click in Dolphin.</string>
    <string name="account_facebook_login_summary">Log in to Facebook and share with one-click in Dolphin.</string>
    <string name="account_service">ACCOUNT &amp; SERVICE</string>
    <string name="account_sync">Account &amp; Sync</string>
    <string name="account_twitter_login_summary">Log in to Twitter and share with one-click in Dolphin.</string>
    <string name="action">Sign in</string>
    <string name="action_android_ua">Android(default)user agent</string>
    <string name="action_custom_ua">Custom user agent</string>
    <string name="action_desktop_ua">Desktop user agent</string>
    <string name="action_group_access">Quick access</string>
    <string name="action_group_advanced_option">Advanced options</string>
    <string name="action_group_data_option">Data</string>
    <string name="action_group_load_url">Custom URL:</string>
    <string name="action_group_page_option">Website navigation</string>
    <string name="action_group_tab_option">Tabs</string>
    <string name="action_ipad_ua">Ipad user agent</string>
    <string name="action_iphone_ua">Iphone user agent</string>
    <string name="action_load_url">load url：</string>
    <string name="action_menu_item_checked">ON</string>
    <string name="action_menu_item_download">Downloads</string>
    <string name="action_menu_item_exit">Exit</string>
    <string name="action_menu_item_settings">Settings</string>
    <string name="action_menu_item_share_page">Share page</string>
    <string name="action_menu_item_unchecked">OFF</string>
    <string name="action_mode_done">Done</string>
    <string name="action_not_support_in_page">Can not complete this action in this page</string>
    <string name="action_number_title">Received number</string>
    <string name="action_search">search：</string>
    <string name="action_share">share</string>
    <string name="action_text_title">Received text</string>
    <string name="adblock_addon_about_message">"Surf the web without the annoying ads. 
AdBlock Add-on is generated based on AdBlock Plus plugin data. It automatically removes unwanted content from the Internet, thereby protecting your personal data. 
- Blocks banners, pop-ups &amp; flashy ads 
- Blocks annoying text ads on the web. 
- Block troublesome tracking on the web. 

This add-on can only work in Dolphin Browser now. And also make sure that you have the Dolphin Jetpack on to enable it. 

Privacy &amp; Policy 

EasyList Repositories 

By The EasyList authors (https://easylist.adblockplus.org/) 

Licensed under the Creative Commons Attribution 3.0 License 

http://creativecommons.org/licenses/by-sa/3.0/us/"</string>
    <string name="adblock_addon_description">AdBlock</string>
    <string name="adblock_addon_download_message">"AdBlock Addon isn't installed yet, would you want to download it?"</string>
    <string name="adblock_addon_download_title">AdBlock</string>
    <string name="backup_settings">Backup</string>
    <string name="box">Box</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="compact_or_restore_page">Mobile view(GWT)</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="create_gesture_for_bookmark">Create a gesture for this url</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="download_dir_edittext_summary">Your file will be saved to:</string>
    <string name="download_dir_summary">Set the directory where to save downloaded files</string>
    <string name="download_dir_title">Download directory</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="evernote">Evernote</string>
    <string name="facebook">Facebook</string>
    <string name="find_dot">Find in page</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_view_download">Downloads</string>
    <string name="ok">OK</string>
    <string name="open_bookmark">Open</string>
    <string name="open_in_new_window">Open in new tab</string>
    <string name="pref_category_gesture_voice_settings">Gesture and sonar</string>
    <string name="pref_category_help">About Dolphin</string>
    <string name="pref_clear_cache_checked">Clear cache when exiting</string>
    <string name="pref_clear_cookie_when_exit">Clear cookies when exiting</string>
    <string name="pref_clear_history_checked">Clear history when exiting</string>
    <string name="pref_content_autofit">Auto-fit pages</string>
    <string name="pref_content_autofit_summary">Format web pages to fit the screen</string>
    <string name="pref_content_block_popups">Block pop-up windows</string>
    <string name="pref_content_javascript">Enable javaScript</string>
    <string name="pref_content_load_images">Load images</string>
    <string name="pref_content_load_images_summary">Display images on web pages</string>
    <string name="pref_content_load_page">Open pages in overview</string>
    <string name="pref_content_load_page_summary">Show overview of newly opened pages</string>
    <string name="pref_content_plugins">Flash player</string>
    <string name="pref_content_set_as_default_browser">Set as default browser</string>
    <string name="pref_content_title">Web content</string>
    <string name="pref_customize_settings">Customize</string>
    <string name="pref_default_text_encoding">Text encoding</string>
    <string name="pref_default_text_encoding_default">Latin-1</string>
    <string name="pref_default_text_encoding_dialogtitle">Text encoding</string>
    <string name="pref_default_zoom">Default zoom</string>
    <string name="pref_default_zoom_dialogtitle">Default zoom</string>
    <string name="pref_dns_prefetch_enabled">DNS Prefetch</string>
    <string name="pref_dns_prefetch_enabled_summary">Prefetch DNS for hosts we are about to connect to.</string>
    <string name="pref_dolphin_service_settings">Account and service</string>
    <string name="pref_exit_confirmation">Confirm before exiting</string>
    <string name="pref_extras_reset_default">Reset to default</string>
    <string name="pref_extras_reset_default_dlg">All browser settings will revert to default values.</string>
    <string name="pref_extras_reset_default_dlg_title">Reset to default</string>
    <string name="pref_extras_website_settings">Website data</string>
    <string name="pref_extras_website_settings_summary">View advanced settings for individual websites</string>
    <string name="pref_language_string">Language</string>
    <string name="pref_personal_data_settings">Accounts &amp; Data</string>
    <string name="pref_preconnection_enabled">Pre-connect</string>
    <string name="pref_preconnection_enabled_summary">Pre-connect to hosts we are about to connect to.</string>
    <string name="pref_prefetch_strategy">Page pre-cache</string>
    <string name="pref_privacy_clear_cache">Cache and site data</string>
    <string name="pref_privacy_clear_cache_dlg">Locally cached content and databases will be deleted.</string>
    <string name="pref_privacy_clear_cache_summary">Clear locally cached content and databases</string>
    <string name="pref_privacy_clear_cookies">Cookies</string>
    <string name="pref_privacy_clear_cookies_dlg">All cookies will be deleted.</string>
    <string name="pref_privacy_clear_cookies_summary">Clear all browser cookies</string>
    <string name="pref_privacy_clear_form_data">Form data</string>
    <string name="pref_privacy_clear_form_data_dlg">All saved form data will be deleted.</string>
    <string name="pref_privacy_clear_form_data_summary">Clear all the saved form data</string>
    <string name="pref_privacy_clear_history">Browsing history</string>
    <string name="pref_privacy_clear_history_dlg">The browser navigation history will be deleted.</string>
    <string name="pref_privacy_clear_history_summary">Clear the browser navigation history</string>
    <string name="pref_privacy_clear_html5_data">Clear HTML5 data</string>
    <string name="pref_privacy_clear_html5_data_dlg">All locally saved HTML5 data will be deleted.</string>
    <string name="pref_privacy_clear_html5_data_summary">Click to clear locally saved HTML5 data</string>
    <string name="pref_privacy_clear_passwords">Passwords</string>
    <string name="pref_privacy_clear_passwords_dlg">All saved passwords will be deleted.</string>
    <string name="pref_privacy_clear_passwords_summary">Clear all saved passwords</string>
    <string name="pref_privacy_enable_geolocation">Enable location</string>
    <string name="pref_privacy_enable_geolocation_summary">Allow sites to request access to your location</string>
    <string name="pref_root_title">Settings</string>
    <string name="pref_save_cache_to_sdcard">Cache to SD card</string>
    <string name="pref_save_cache_to_sdcard_summary">Save cache to SD card if available</string>
    <string name="pref_security_accept_cookies">Accept cookies</string>
    <string name="pref_security_accept_cookies_summary">Allow sites to save and read \"cookie\" data</string>
    <string name="pref_security_check_ssl_cert_revocation">Check for server certificate revocation</string>
    <string name="pref_security_check_ssl_cert_revocation_summary">"Check whether the server's SSL certificate has been revoked"</string>
    <string name="pref_security_remember_passwords">Remember passwords</string>
    <string name="pref_security_remember_passwords_summary">Save usernames and passwords for websites</string>
    <string name="pref_security_save_form_data">Remember form data</string>
    <string name="pref_security_save_form_data_summary">Remember data I type in forms for later use</string>
    <string name="pref_security_show_security_warning">Show security warnings</string>
    <string name="pref_security_show_security_warning_summary">"Show warning if there is a problem with a site's security"</string>
    <string name="pref_security_use_master_key">Use master password</string>
    <string name="pref_security_use_master_key_summary">Use master password to protect your saved passwords.</string>
    <string name="pref_send_feedback">Send feedback</string>
    <string name="pref_smart_cache">Smart cache</string>
    <string name="pref_smart_cache_summary">Save cache to SD card if available</string>
    <string name="pref_text_size">Text size</string>
    <string name="pref_text_size_dialogtitle">Text size</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="reset">Reset</string>
    <string name="restore_settings">Restore</string>
    <string name="restore_settings_summary">"Your settings, bookmarks, web data will be replaced with those from the backup. And Dolphin Browser will restart afterwards.
Are you sure you want to continue?"</string>
    <string name="save_page">Save page</string>
    <string name="save_to_bookmarks">Add bookmark</string>
    <string name="select_dot">Select text</string>
    <string name="set_as_default_browser_toast">Click the box to choose Dolphin Browser as your default browser</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="share_page">Share page</string>
    <string name="twitter">Twitter</string>
    <string name="use_dolphin_webkit">Dolphin Jetpack</string>
</resources>