<?xml version="1.0" encoding="utf-8"?>
<dolphin.preference.ExpandablePreferenceScreen dolphin:title="@string/pref_content_title"
  xmlns:dolphin="http://schemas.android.com/apk/res/mobi.mgeek.TunnyBrowser"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <dolphin.preference.TextSizePreference dolphin:dialogTitle="@string/pref_text_size_dialogtitle" dolphin:entries="@array/pref_text_size_choices" dolphin:entryValues="@array/pref_text_size_values" dolphin:key="text_size" dolphin:title="@string/pref_text_size" dolphin:defaultValue="NORMAL" dolphin:background="@drawable/settings_bg_head_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="enable_plugins" dolphin:title="@string/pref_content_plugins" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_middle_bk" />
    <mobi.mgeek.preference.FlashPlayerPreference dolphin:entries="@array/pref_plugin_state_choices" dolphin:entryValues="@array/pref_plugin_state_values" dolphin:key="plugin_state" dolphin:title="@string/pref_content_plugins" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.ListPreference dolphin:entries="@array/pref_load_images_choices" dolphin:entryValues="@array/pref_load_images_values" dolphin:key="load_images_state" dolphin:title="@string/pref_content_load_images" dolphin:summary="@string/pref_content_load_images_summary" dolphin:defaultValue="ON" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.ListPreference dolphin:dialogTitle="@string/pref_default_text_encoding_dialogtitle" dolphin:entries="@array/pref_default_text_encoding_choices" dolphin:entryValues="@array/pref_default_text_encoding_values" dolphin:key="default_text_encoding" dolphin:title="@string/pref_default_text_encoding" dolphin:defaultValue="@string/pref_default_text_encoding_default" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="accept_cookies" dolphin:title="@string/pref_security_accept_cookies" dolphin:summary="@string/pref_security_accept_cookies_summary" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="enable_javascript" dolphin:title="@string/pref_content_javascript" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="load_page" dolphin:title="@string/pref_content_load_page" dolphin:summary="@string/pref_content_load_page_summary" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="block_popup_windows" dolphin:title="@string/pref_content_block_popups" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="show_security_warnings" dolphin:title="@string/pref_security_show_security_warning" dolphin:summary="@string/pref_security_show_security_warning_summary" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="server_cert_revocation_check" dolphin:title="@string/pref_security_check_ssl_cert_revocation" dolphin:summary="@string/pref_security_check_ssl_cert_revocation_summary" dolphin:defaultValue="false" dolphin:background="@drawable/settings_bg_foot_bk" />
    <dolphin.preference.PreferenceDivider />
    <dolphin.preference.CheckBoxPreference dolphin:key="autofit_pages" dolphin:title="@string/pref_content_autofit" dolphin:summary="@string/pref_content_autofit_summary" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="networkboost.dns_prefetch" dolphin:title="@string/pref_dns_prefetch_enabled" dolphin:summary="@string/pref_dns_prefetch_enabled_summary" dolphin:enabled="true" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_head_bk" />
    <dolphin.preference.CheckBoxPreference dolphin:key="networkboost.preconnection" dolphin:title="@string/pref_preconnection_enabled" dolphin:summary="@string/pref_preconnection_enabled_summary" dolphin:enabled="true" dolphin:dependency="networkboost.dns_prefetch" dolphin:defaultValue="true" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.ListPreference dolphin:entries="@array/pref_preload_strategy_choices" dolphin:entryValues="@array/pref_preload_strategy_values" dolphin:key="networkboost.prefetch_strategy" dolphin:title="@string/pref_prefetch_strategy" dolphin:defaultValue="1" dolphin:background="@drawable/settings_bg_middle_bk" />
    <dolphin.preference.DefaultZoomPreference dolphin:dialogTitle="@string/pref_default_zoom_dialogtitle" dolphin:entries="@array/pref_default_zoom_choices" dolphin:entryValues="@array/pref_default_zoom_values" dolphin:key="default_zoom" dolphin:title="@string/pref_default_zoom" dolphin:defaultValue="MEDIUM" dolphin:background="@drawable/settings_bg_middle_bk" />
    <mobi.mgeek.TunnyBrowser.DolphinWebkitPreference />
</dolphin.preference.ExpandablePreferenceScreen>